--- a/eas.json
+++ b/eas.json
@@ -2,6 +2,7 @@
   "cli": {
     "version": ">= 14.1.0",
     "appVersionSource": "remote",
+    "requireCommit": true
   },
   "build": {
     "development": {
