--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-alert-notification": "^0.4.2",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^7.2.2",
     "react-native-indicators": "^0.17.0",
