--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
