--- a/package.json
+++ b/package.json
@@ -21,24 +21,30 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.8",
+    "axios": "^1.11.0",
     "expo": "^53.0.0",
     "expo-build-properties": "~0.14.8",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-image-picker": "~16.1.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-updates": "~0.28.16",
     "htmlparser2": "^9.1.0",
     "https-proxy-agent": "^7.0.6",
+    "jalaali-js": "^1.2.8",
+    "moment-jalaali": "^0.10.4",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
     "react-native-alert-notification": "^0.4.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-image-picker": "^7.2.2",
     "react-native-indicators": "^0.17.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
@@ -52,8 +58,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-virtualized-view": "^1.0.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-dev-client": "~5.2.4"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
